# rocket-pastebin

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test.html
src/: lib.rs  main.rs
uploads/: _index.txt
web/: package-lock.json  package.json
web/src/: App.css  App.js
