cargo-features = ["strip"]

[package]
name = "rocket-pastebin"
version = "0.1.0"
authors = ["Hugo Tse <hktse2006@gmail.com>"]
description = "A pastebin made with react and rocket"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hktse/rocket-pastebin"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"

[dependencies]
rocket = "~0.4.0"
rand = "~0.7.0"

[dependencies.rocket_contrib]
version = "~0.4.0"
default-features = false
features = ["serve"]
